# yaxiwm

./: Cargo.toml  README.md  install.sh
src/ipc/: lib.rs
src/yaxc/: main.rs
src/yaxc/client/: mod.rs
src/yaxiwm/: main.rs
src/yaxiwm/config/: mod.rs
src/yaxiwm/event/: mod.rs
src/yaxiwm/server/: mod.rs
src/yaxiwm/tree/: mod.rs
src/yaxiwm/wm/: mod.rs
src/yokac/: main.rs
src/yokac/client/: mod.rs
src/yokai/: main.rs
src/yokai/config/: mod.rs
src/yokai/server/: mod.rs
src/yokai/startup/: mod.rs
src/yokai/tree/: mod.rs
src/yokai/wm/: mod.rs
