[package]
name = "yokai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yokai"
path = "src/yokai/main.rs"

[[bin]]
name = "yokac"
path = "src/yokac/main.rs"

[lib]
name = "ipc"
path = "src/ipc/lib.rs"


[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.215", features = ["derive"] }
clap = { version = "4.5.21", features = ["derive"] }
yaxi = { path = "../xrs", features = ["xinerama", "ewmh"] }
